# libadwaita

./: .gitignore  .gitlab-ci.yml  NEWS  meson.build
.gitlab-ci/: android-sdk.sh
build-aux/android/: org.gnome.Adwaita1.Demo.xml
demo/: adwaita-demo.c  meson.build  style.css
demo/data/: meson.build  org.gnome.Adwaita1.Demo.metainfo.xml.in.in
demo/pages/animations/: adw-demo-page-animations.c  adw-demo-page-animations.ui
demo/pages/carousel/: adw-demo-page-carousel.c  adw-demo-page-carousel.ui
demo/pages/clamp/: adw-demo-page-clamp.ui
demo/pages/lists/: adw-demo-page-lists.ui
doc/: migrating-libhandy-1-4-to-libadwaita.md
po/: LINGUAS  be.po  cs.po  es.po  fa.po  hu.po  kab.po  ko.po  kw.po  pt.po  ro.po  sk.po  sl.po  sr.po  sv.po  zh_TW.po
src/: adw-about-dialog.c  adw-about-dialog.h  adw-about-window.c  adw-about-window.h  adw-about-window.ui  adw-accent-color-private.h  adw-accent-color.c  adw-action-row.c  adw-adaptive-host.c  adw-adaptive-host.h  adw-adaptive-preview-presets-private.h  adw-adaptive-preview.c  adw-alert-dialog.c  adw-back-button.c  adw-bottom-sheet.c  adw-breakpoint-bin.c  adw-colors-private.h  adw-colors.c  adw-colors.h  adw-dialog.c  adw-enum-list-model.c  adw-enum-list-model.h  adw-flap.c  adw-floating-sheet.c  adw-inspector-page.c  adw-inspector-page.ui  adw-leaflet.c  adw-link-row.c  adw-message-dialog.c  adw-navigation-view.c  adw-overlay-split-view.c  adw-preferences-group.c  adw-preferences-page.c  adw-preferences-window.c  adw-preferences-window.ui  adw-settings-impl-android.c  adw-settings-impl-gsettings.c  adw-settings-impl-legacy.c  adw-settings-impl-portal.c  adw-settings-impl-private.h  (+27 more)
src/stylesheet/: _defaults.scss  adwaita-stylesheet.gresources.xml
tests/: ignore-deprecations.h  meson.build  test-about-dialog.c  test-flap.c  test-preferences-window.c  test-sidebar.c  test-view-switcher-sidebar.c
tests/manual/: test-alert-dialogs.c
(+10 files in other folders)
